--- a/web/src/pages/Principal.css
+++ b/web/src/pages/Principal.css
@@ -371,6 +371,8 @@ body {
 
 .match-conversation {
   width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
   max-height: 300px;
   overflow-y: auto;
   margin-top: 10px;
