--- a/web/src/pages/Principal.css
+++ b/web/src/pages/Principal.css
@@ -372,7 +372,7 @@ body {
 .match-conversation {
   width: 100%;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   max-height: 300px;
   overflow-y: auto;
   margin-top: 10px;
