--- a/web/src/pages/Principal.css
+++ b/web/src/pages/Principal.css
@@ -1,422 +1,3 @@
- /* * {
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  box-sizing: border-box;
-}
-
-html, body, #root {
-  height: 100%;
-}
-
-body {
-  background: #f5f5f5;
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  height: 100%;
-}
-
-#container-wrapper {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap; 
-  padding: 10px;
-}
-
-#logged-user-detail-container {
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  margin: 10px;
-  text-align: center;
-  flex: 1;
-  min-width: 300px;  
-}
-
-#side-container-left {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  min-width: 300px; 
-}
-
-.liked-container, .unliked-container {
-  flex: 1;
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  text-align: center;
-  margin: 10px;
-}
-
-#like-container, #dislike-container, ul {
-  list-style: none;
-}
-
-.main-container {
-  flex: 1;
-  min-width: 300px;
-  background-color: #ebe3e3;
-  border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  padding: 20px;
-  margin: 10px;
-}
-
-.logo {
-  width: 100px;
-  margin: auto;
-}
-
-.main-container ul {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 15px;
-}
-
-.main-container ul li {
-  width: 100%;
-  max-width: 300px;
-  margin-bottom: 20px;
-  padding: 20px;
-  border-radius: 8px;
-  background: #f9f9f9;
-}
-
-.profile-image {
-  width: 180px;
-  max-width: 180px;
-  height: 180px;
-  min-height: 180px;
-
-   
-  border-radius: 50%;
-  object-fit: none;
-  cursor: pointer;
-}
-
-.profile-image:hover {
-  cursor: pointer;
-}
-
-.main-container ul li .buttons {
-  margin-top: 15px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-}
-
-.main-container ul li .buttons button {
-  border: 0;
-  background: none;
-  cursor: pointer;
-}
-
-.buttons img {
-  width: 40px;
-  height: 40px;
-}
-
-.main-container ul li img {
-  max-width: 100%;
-  border-radius: 5px 5px 0 0;
-}
-
-.main-container ul li footer {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: #fff;
-  border: 1px solid #eee;
-  padding: 15px 0px;
-  border-radius: 0 0 5px 5px;
-}
-
-.main-container ul li footer strong {
-  font-size: 16px;
-  color: #333;
-}
-
-.main-container ul li footer p {
-  font-size: 14px;
-  line-height: 20px;
-  color: #999;
-  margin-top: 5px;
-  width: 100%;
-  height: 40px;
-}
-
-.main-container ul li .buttons button:hover img {
-  transform: translateY(-5px);
-  transition: all 0.2s;
-}
-
-.main-container .empty {
-  font-size: 16px;
-  color: #999;
-  font-weight: bold;
-  background: #fff;
-  border-radius: 4px;
-  text-align: center;
-  padding: 20px;
-  margin-top: 150px;
-}
-
- 
-.match-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: rgba(0, 0, 0, 0.8);
-  opacity: 0;  
-  transform: scale(0.9);  
-  transition: opacity 1s, transform 1s; 
-}
-
-.match-container.show {
-  opacity: 1; 
-  transform: scale(1); 
-}
-
-.match-container.hide {
-  opacity: 0; 
-  transform: scale(0.9);  
-}
-
-.match-container .avatar {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  border: 5px solid #fff;
-  margin: 30px 0;
-}
-
-.match-container strong {
-  font-size: 32px;
-  color: #fff;
-  text-align: center;
-}
-
-.match-container p {
-  margin-top: 10px;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 400px;
-  color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-}
-
-.match-container button {
-  border: 0;
-  background: none;
-  font-weight: bold;
-  color: rgba(255, 255, 255, 0.8);
-  font-size: 18px;
-  margin-top: 30px;
-  cursor: pointer;
-}
-
- 
-@media (max-width: 768px) {
-  .main-container, .liked-container, .unliked-container {
-    margin: 10px 0;
-    min-width: 100%;  
-  }
-
-  .main-container ul li {
-    width: 90%;  
-  }
-}
-
-@media (max-width: 480px) {
-  .match-container .avatar {
-    width: 150px;
-    height: 150px;
-  }
-
-  .match-container strong {
-    font-size: 24px;
-  }
-
-  .match-container p {
-    font-size: 16px;
-    line-height: 24px;
-  }
-
-  .match-container button {
-    font-size: 16px;
-  }
-} 
-
-
-.matches-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.matches-menu {
-  display: flex;
-  overflow-x: auto;
-  margin-bottom: 10px;
-}
-
-.matches-menu img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 10px;
-  cursor: pointer;
-}
-
-.matches-menu img.selected {
-  border: 2px solid #007bff;
-}
-
-.match-details {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.match-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.match-conversation {
-  width: 100%;
-  max-height: 300px;
-  overflow-y: auto;
-  margin-top: 10px;
-}
-
-.buttons {
-  margin-top: 10px;
-}
-
-.matches-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  margin: 10px;
-  width: 100%;
-  max-width: 800px;
-}
-
-.matches-menu {
-  display: flex;
-  overflow-x: auto;
-  margin-bottom: 20px;
-}
-
-.matches-menu img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 10px;
-  cursor: pointer;
-  border: 2px solid transparent;
-  transition: border 0.3s;
-}
-
-.matches-menu img.selected {
-  border-color: #007bff;
-}
-
-.match-details {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-
-.match-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.match-header img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-bottom: 10px;
-}
-
-.match-header strong {
-  font-size: 20px;
-  color: #333;
-}
-
-.match-conversation {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  max-height: 300px;
-  overflow-y: auto;
-  margin-top: 10px;
-  background-color: #f9f9f9;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.buttons {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-.buttons button {
-  border: 0;
-  background: none;
-  cursor: pointer;
-}
-
-.buttons img {
-  width: 40px;
-  height: 40px;
-  transition: transform 0.2s;
-}
-
-.buttons img:hover {
-  transform: translateY(-5px);
-}
-
-.empty {
-  font-size: 16px;
-  color: #999;
-  font-weight: bold;
-  background: #fff;
-  border-radius: 4px;
-  text-align: center;
-  padding: 20px;
-  margin-top: 150px;
-}
- */
-
  * {
   margin: 0;
   padding: 0;
@@ -437,13 +18,6 @@ body {
   height: 100%;
 }
 
-#container-wrapper {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap; 
-  padding: 10px;
-}
-
 #logged-user-detail-container {
   background: #fff;
   border-radius: 10px;
@@ -483,8 +57,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   text-align: center;
-  padding: 20px;
-  margin: 10px;
+ 
 }
 
 .logo {
@@ -496,7 +69,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 15px;
+ 
 }
 
 .main-container ul li {
@@ -601,6 +174,7 @@ body {
   opacity: 0;  
   transform: scale(0.9);  
   transition: opacity 1s, transform 1s; 
+  max-width: 300px;
 }
 
 .match-container.show {
@@ -631,7 +205,7 @@ body {
   margin-top: 10px;
   font-size: 20px;
   line-height: 30px;
-  max-width: 400px;
+ 
   color: rgba(255, 255, 255, 0.8);
   text-align: center;
 }
@@ -681,13 +255,20 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #fff;
+  background-color: fff;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin: 10px;
-  width: 100%;
-  max-width: 800px;
+  height: 100vh;
+ 
+}
+
+.matches-container > div {
+ 
+  width: 300px;
+  border-radius: 10px;
+ 
 }
 
 .matches-menu {
@@ -744,6 +325,8 @@ body {
   overflow-y: auto;
   margin-top: 10px;
   background-color: #f9f9f9;
+  border: 1px solid black;
+  font-size: 15px;
   padding: 10px;
   border-radius: 10px;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
@@ -782,3 +365,61 @@ body {
   padding: 20px;
   margin-top: 150px;
 }
+
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 0;
+  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.1);
+}
+
+.bottom-nav button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.bottom-nav button img {
+  width: 30px;
+  height: 30px;
+}
+ 
+.user-detail-container {
+  width: 100%;
+  background-color: #fff; 
+  box-shadow: 0 4px 2px -2px gray;  
+}
+
+.user-detail-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;  
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+.user-name {
+  margin: 0;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.user-detail-container .profile-logo-image {
+  width: 50px;  
+  height: 50px;
+  border-radius: 50%; 
+  margin-left: 10px;  
+}
+
+
+ 
